tests/type/bad/recur_outside_loop.hel
foreign io_unit: IO<()>;

x = recur(1);

main = io_unit;
